# embedding-demo

./: Cargo.toml  README.md
.reuse/: dep5
src/: main.rs
