[package]
name = "jstime-embed-demo"
version = "0.1.0"
description = "This is how you embed jstime"
authors = ["Myles Borins <myles.borins@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/mylesborins/jstime-embed-demo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jstime_core = "^0.19.1"
